--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,7 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Harish Portfolio",
+  "name": "Harish Yerraguntla - Full-Stack Software Engineer Portfolio",
+  "description": "Portfolio showcasing full-stack development expertise in React/Next.js, Vue.js, and modern web technologies",
   "icons": [
     {
       "src": "favicon.ico",
@@ -18,8 +19,12 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": ".",
+  "start_url": "./",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "orientation": "portrait-primary",
+  "theme_color": "#6366f1",
+  "background_color": "#0f0f23",
+  "categories": ["portfolio", "developer", "software-engineer"],
+  "lang": "en-US",
+  "dir": "ltr"
 }
